[package]
name = "walmart-goback-path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.10.2"
roxmltree = "0.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
svg-path-parser = { git = "https://github.com/Jeansidharta/svg-path-parser", branch = "fix/scientific-notation-support" }
svgtypes = "0.13.0"
thiserror = "1.0.51"
time = "0.3.31"
